store layout breaks when the address is too long fixed

--- a/assets/src/less/responsive.less
+++ b/assets/src/less/responsive.less
@@ -1,6 +1,61 @@
 /*--------------------------------------------------
 :: Responsive Styles
 -------------------------------------------------- */
+
+@media (max-width: 1366px) {
+    .dokan-single-store {
+        .profile-frame {
+            .profile-info-box.profile-layout-layout1 {
+                .profile-info-summery-wrapper {
+                    .profile-info-summery {
+                        .profile-info {
+                            .dokan-store-info {
+                                max-width: 650px;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 1199px) {
+    .dokan-single-store {
+        .profile-frame {
+            .profile-info-box.profile-layout-layout1 {
+                .profile-info-summery-wrapper {
+                    .profile-info-summery {
+                        .profile-info {
+                            .dokan-store-info {
+                                max-width: 590px;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 992px) {
+    .dokan-single-store {
+        .profile-frame {
+            .profile-info-box.profile-layout-layout1 {
+                .profile-info-summery-wrapper {
+                    .profile-info-summery {
+                        .profile-info {
+                            .dokan-store-info {
+                                max-width: 430px;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
 @media (max-width: 991px) {
 
 }
@@ -133,6 +188,21 @@
             margin-bottom: 50px;
         }
     }
+    .dokan-single-store {
+        .profile-frame {
+            .profile-info-box.profile-layout-layout1 {
+                .profile-info-summery-wrapper {
+                    .profile-info-summery {
+                        .profile-info {
+                            .dokan-store-info {
+                                max-width: 500px;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
 
 @media (max-width: 430px) {
@@ -234,5 +304,41 @@
     // store page
     .dokan-single-store .profile-frame .profile-info-box {
         width: 100%;
+    }
+
+    .dokan-single-store {
+        .profile-frame {
+            .profile-info-box.profile-layout-layout1 {
+                .profile-info-summery-wrapper {
+                    .profile-info-summery {
+                        .profile-info {
+                            .dokan-store-info {
+                                max-width: 280px;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}    
+
+
+
+@media (max-width: 360px) {
+    .dokan-single-store {
+        .profile-frame {
+            .profile-info-box.profile-layout-layout1 {
+                .profile-info-summery-wrapper {
+                    .profile-info-summery {
+                        .profile-info {
+                            .dokan-store-info {
+                                max-width: 200px;
+                            }
+                        }
+                    }
+                }
+            }
+        }
     }
 }
